--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typedoc-repros",
   "dependencies": {
-    "typedoc": "latest",
+    "typedoc": "0.23.24",
     "typescript": "latest"
   }
 }
